--- a/packages/react-tiny-toast/lib/index.css
+++ b/packages/react-tiny-toast/lib/index.css
@@ -11,8 +11,15 @@
 }
 
 .toast-container.top-center {
-  top: 100px;
   margin-left: auto;
   margin-right: auto;
   z-index: 9999;
+}
+
+.toast-container.top-left {
+  align-self: flex-start;
+}
+
+.toast-container.top-right {
+  align-self: flex-end;
 }
