--- a/packages/react-tiny-toast/src/index.css
+++ b/packages/react-tiny-toast/src/index.css
@@ -34,3 +34,28 @@
   align-self: flex-end;
   bottom: 0px;
 }
+.toast-item {
+  padding: 8px;
+  margin: 2px;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  -webkit-box-shadow: -4px -4px 16px -6px rgba(0,0,0,1);
+  -moz-box-shadow: -4px -4px 16px -6px rgba(0,0,0,1);
+  box-shadow: -4px -4px 16px -6px rgba(0,0,0,1);
+}
+.toast-item-success {
+  background-color: #28a745;
+}
+.toast-item-danger {
+  background-color: #dc3545;
+}
+.toast-item-default {
+  background-color: #6c757d;
+  color: #f8f9fa;
+}
+.toast-item-warning {
+  background-color: #ffc107;
+}
