--- a/packages/playground/index.css
+++ b/packages/playground/index.css
@@ -1,25 +1,31 @@
 .main-container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-shrink: 0; /* known bug in safari browsers */
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-shrink: 0; /* known bug in safari browsers */
+  justify-content: center;
+  align-items: center;
 }
 
 input {
-    margin: 0 8px;
+  margin: 0 8px;
 }
 
 select {
-    margin: 0 8px;
+  margin: 0 8px;
 }
 
 button {
-    margin: 16px;
+  margin: 16px;
 }
 
 .form-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+.custom-react-tiny-toast {
+  color: grey;
+  background-color: greenyellow;
+  border: 1px solid red;
 }
